kb: update topics JVM Internals & Class Loading, Garbage Collection Algorithms, Multithreading & Concurrency in Java with additional sections; move topics to NEXTTOPICS.md